fix(UserSelect): incorrect avatar size and label gap (#4149)
closed https://github.com/consta-design-system/uikit/issues/4145

--- a/src/components/UserSelect/UserSelectItem/UserSelectItem.css
+++ b/src/components/UserSelect/UserSelectItem/UserSelectItem.css
@@ -36,7 +36,9 @@
     cursor: auto;
   }
 
-  &_active {
+  &_active,
+  &_active .UserSelectItem-Label,
+  &_active .UserSelectItem-SubLabel {
     color: var(--color-control-typo-secondary);
   }
 
@@ -90,10 +92,26 @@
   }
 
   &-Info {
+    flex: 1;
     padding-left: var(--sub-info-space);
   }
 
+  &-Label,
   &-SubLabel {
+    display: -webkit-box;
+    overflow: hidden;
+    line-height: var(--line-height-text-m);
+    word-wrap: break-word;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+  }
+
+  &-Label {
+    max-width: 20ch;
+  }
+
+  &-SubLabel {
+    max-width: 28ch;
     opacity: 0.7;
     font-size: var(--sub-label-font-size);
 
